[feat] API extraction

--- a/redditFeelings.ipynb
+++ b/redditFeelings.ipynb
@@ -359,7 +359,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "f7523460",
       "metadata": {
         "colab": {
@@ -387,10 +387,10 @@
         "posts_df = pd.DataFrame([asdict(p) for p in posts_rows])\n",
         "comments_df = pd.DataFrame([asdict(c) for c in comments_rows])\n",
         "\n",
-        "posts_csv = OUT_DIR / \"posts.csv\"\n",
-        "comments_csv = OUT_DIR / \"comments.csv\"\n",
-        "posts_jsonl = OUT_DIR / \"posts.jsonl\"\n",
-        "comments_jsonl = OUT_DIR / \"comments.jsonl\"\n",
+        "posts_csv = OUT_DIR / \"vader_posts.csv\"\n",
+        "comments_csv = OUT_DIR / \"vader_comments.csv\"\n",
+        "posts_jsonl = OUT_DIR / \"vader_posts.jsonl\"\n",
+        "comments_jsonl = OUT_DIR / \"vader_comments.jsonl\"\n",
         "\n",
         "posts_df.to_csv(posts_csv, index=False, encoding=\"utf-8-sig\")\n",
         "comments_df.to_csv(comments_csv, index=False, encoding=\"utf-8-sig\")\n",
