--- a/reddit_scrapper.ipynb
+++ b/reddit_scrapper.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Reddit Scraper\n",
     "\n",
-    "Este notebook usa la **API oficial de Reddit con OAuth (PRAW)** para descargar **posts** y **comentarios** de un subreddit y escribe **Data/raw/** sin métricas ni preprocesamiento."
+    "This notebook uses the **official Reddit API with OAuth (PRAW)** to download **posts** and **comments** from a subreddit and writes them to **Data/raw/** without metrics or preprocessing."
    ]
   },
   {
@@ -15,7 +15,7 @@
    "id": "dffdcfee",
    "metadata": {},
    "source": [
-    "## Librerias"
+    "## Libraries"
    ]
   },
   {
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ejecutar esta celda para instalar las siguientes dependencias:\n",
+    "# Run this cell to install the following dependencies:\n",
     "# ```bash\n",
     "# pip install praw pandas tqdm python-dotenv\n",
     "# ```"
@@ -54,7 +54,7 @@
    "id": "f0cbeccd",
    "metadata": {},
    "source": [
-    "## Parámetros y Credenciales"
+    "## Parameters and Credentials"
    ]
   },
   {
@@ -64,39 +64,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Editar el archivo .env con las credenciales de Reddit API\n",
+    "# Edit the .env file with your Reddit API credentials\n",
     "load_dotenv()\n",
-    "# Credenciales de Reddit API \n",
-    "# Antes de ejecutar esta celda definir en un .env las siguientes variables:\n",
+    "# Reddit API credentials\n",
+    "# Before running this cell, define the following variables in a .env file:\n",
     "# - `REDDIT_CLIENT_ID`\n",
     "# - `REDDIT_CLIENT_SECRET`\n",
     "# - `REDDIT_USER_AGENT`\n",
-    "# O definirlas directamente aquí:\n",
-    "# REDDIT_CLIENT_ID     = \"tu_client_id\"\n",
-    "# REDDIT_CLIENT_SECRET = \"tu_client_secret\"\n",
-    "# REDDIT_USER_AGENT    = \"tu_user_agent\"\n",
+    "# Or define them directly here:\n",
+    "# REDDIT_CLIENT_ID     = \"your_client_id\"\n",
+    "# REDDIT_CLIENT_SECRET = \"your_client_secret\"\n",
+    "# REDDIT_USER_AGENT    = \"your_user_agent\"\n",
     "REDDIT_CLIENT_ID     = os.getenv(\"REDDIT_CLIENT_ID\")\n",
     "REDDIT_CLIENT_SECRET = os.getenv(\"REDDIT_CLIENT_SECRET\")\n",
     "REDDIT_USER_AGENT    = os.getenv(\"REDDIT_USER_AGENT\")\n",
     "\n",
-    "# Parámetros\n",
-    "SUBREDDIT                   = \"USCIS\"    # <-- el subreddit\n",
+    "# Parameters\n",
+    "SUBREDDIT                   = \"USCIS\"    # <-- target subreddit\n",
     "SORT                        = \"top\"      # \"hot\" | \"new\" | \"top\" | \"rising\"\n",
-    "TIME_FILTER                 = \"year\"     # si SORT=\"top\", usar: \"day\"|\"week\"|\"month\"|\"year\"|\"all\"\n",
-    "MIN_POSTS                   = 20         # mínimo a obtener\n",
-    "MAX_POSTS                   = 200        # máximo a obtener\n",
-    "MAX_COMMENTS_PER_POST       = 80         # tope de comentarios por post\n",
-    "DOWNLOAD_IMAGES             = False      # descarga local de imágenes si la URL lo es\n",
-    "REQUEST_SLEEP_S             = 0.7        # respeta rate limit\n",
-    "DATA_DIR                    = Path(\"data\") # directorio base de datos     \n",
-    "RAW_DIR                     = DATA_DIR / \"raw\" # directorio datos sin procesar\n",
+    "TIME_FILTER                 = \"year\"     # if SORT=\"top\", use: \"day\"|\"week\"|\"month\"|\"year\"|\"all\"\n",
+    "MIN_POSTS                   = 20         # minimum number of posts to fetch\n",
+    "MAX_POSTS                   = 200        # maximum number of posts to fetch\n",
+    "MAX_COMMENTS_PER_POST       = 80         # limit on comments per post\n",
+    "DOWNLOAD_IMAGES             = False      # download images locally if URL points to one\n",
+    "REQUEST_SLEEP_S             = 0.7        # respect Reddit API rate limits\n",
+    "DATA_DIR                    = Path(\"data\") # base data directory     \n",
+    "RAW_DIR                     = DATA_DIR / \"raw\" # directory for unprocessed data\n",
     "\n",
-    "# Crear directorios si no existen\n",
+    "# Create directories if they don't exist\n",
     "RAW_DIR.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "# Verificar credenciales\n",
+    "# Check credentials\n",
     "if not REDDIT_CLIENT_ID or not REDDIT_CLIENT_SECRET:\n",
-    "    raise RuntimeError(\"Faltan credenciales: define REDDIT_CLIENT_ID y REDDIT_CLIENT_SECRET en el entorno o .env\")"
+    "    raise RuntimeError(\"Missing credentials: define REDDIT_CLIENT_ID and REDDIT_CLIENT_SECRET in the environment or .env\")"
    ]
   },
   {
@@ -104,7 +104,7 @@
    "id": "3860451c",
    "metadata": {},
    "source": [
-    "## Utilidades"
+    "## Utilities"
    ]
   },
   {
@@ -115,7 +115,7 @@
    "outputs": [],
    "source": [
     "def make_reddit() -> \"praw.Reddit\":\n",
-    "    \"\"\"Crea una instancia autenticada de PRAW Reddit API Client.\"\"\"\n",
+    "    \"\"\"Creates an authenticated PRAW Reddit API client instance.\"\"\"\n",
     "    return praw.Reddit(\n",
     "        client_id=REDDIT_CLIENT_ID,\n",
     "        client_secret=REDDIT_CLIENT_SECRET,\n",
@@ -124,12 +124,12 @@
     "\n",
     "\n",
     "def is_image_url(u: str) -> bool:\n",
-    "    \"\"\"Determina si una URL apunta a una imagen (jpg, jpeg, png, gif).\"\"\"\n",
+    "    \"\"\"Checks if a URL points to an image (jpg, jpeg, png, gif).\"\"\"\n",
     "    return bool(re.search(r\"\\.(jpg|jpeg|png|gif)(?:\\?.*)?$\", (u or \"\"), flags=re.I))\n",
     "\n",
     "\n",
     "def to_iso(ts_utc: Optional[float]) -> Optional[str]:\n",
-    "    \"\"\"Convierte un timestamp UTC a formato ISO 8601.\"\"\"\n",
+    "    \"\"\"Converts a UTC timestamp to ISO 8601 format.\"\"\"\n",
     "    try:\n",
     "        return datetime.fromtimestamp(float(ts_utc), tz=timezone.utc).isoformat()\n",
     "    except Exception:\n",
@@ -137,7 +137,7 @@
     "\n",
     "\n",
     "def rsleep():\n",
-    "    \"\"\"Duerme por REQUEST_SLEEP_S segundos si es mayor a 0.\"\"\"\n",
+    "    \"\"\"Sleeps for REQUEST_SLEEP_S seconds if greater than 0.\"\"\"\n",
     "    if REQUEST_SLEEP_S > 0:\n",
     "        time.sleep(REQUEST_SLEEP_S)"
    ]
@@ -147,7 +147,7 @@
    "id": "2e65db78",
    "metadata": {},
    "source": [
-    "## Esquema de salida cruda de Posts y Comentarios"
+    "## Raw Output Schema for Posts and Comments"
    ]
   },
   {
@@ -187,7 +187,7 @@
    "id": "9dd5ce6e",
    "metadata": {},
    "source": [
-    "## Extracción"
+    "## Data Extraction"
    ]
   },
   {
@@ -200,14 +200,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Posts r/USCIS: 100%|██████████| 200/200 [05:57<00:00,  1.79s/it]"
+      "Posts r/USCIS: 100%|██████████| 200/200 [05:55<00:00,  1.78s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Posts: 200 | Comentarios: 15131\n"
+      "Posts: 200 | Comments: 15131\n"
      ]
     },
     {
@@ -219,12 +219,12 @@
     }
    ],
    "source": [
-    "# Crear cliente Reddit\n",
+    "# Create Reddit client\n",
     "reddit = make_reddit()\n",
-    "# Seleccionar subreddit\n",
+    "# Select subreddit\n",
     "sub = reddit.subreddit(SUBREDDIT)\n",
     "\n",
-    "# Obtener listado de posts según el criterio\n",
+    "# Get post listing based on criteria\n",
     "if SORT == \"hot\":\n",
     "    listing = sub.hot(limit=MAX_POSTS)\n",
     "elif SORT == \"new\":\n",
@@ -236,11 +236,11 @@
     "else:\n",
     "    listing = sub.hot(limit=MAX_POSTS)\n",
     "\n",
-    "# Inicializar listas de resultados\n",
+    "# Initialize result lists\n",
     "posts_rows: List[PostRow] = []\n",
     "comments_rows: List[CommentRow] = []\n",
     "\n",
-    "# Iterar posts\n",
+    "# Iterate posts\n",
     "for p in tqdm(listing, total=MAX_POSTS, desc=f\"Posts r/{SUBREDDIT}\"):\n",
     "    rsleep()\n",
     "    img_urls = [p.url] if is_image_url(getattr(p, \"url\", \"\")) else []\n",
@@ -259,12 +259,12 @@
     "        subreddit=str(getattr(p, \"subreddit\", SUBREDDIT)) if getattr(p, \"subreddit\", None) else SUBREDDIT,\n",
     "    )\n",
     "\n",
-    "    # Comentarios\n",
+    "    # Comments\n",
     "    try:\n",
     "        p.comments.replace_more(limit=0)\n",
     "        com_list = p.comments.list()[:MAX_COMMENTS_PER_POST]\n",
     "    except Exception as e:\n",
-    "        print(f\"[WARN] Comentarios {e} en {pr.permalink}\")\n",
+    "        print(f\"[WARN] Comments {e} in {pr.permalink}\")\n",
     "        com_list = []\n",
     "\n",
     "    for c in com_list:\n",
@@ -280,7 +280,7 @@
     "\n",
     "    posts_rows.append(pr)\n",
     "\n",
-    "print(f\"Posts: {len(posts_rows)} | Comentarios: {len(comments_rows)}\")"
+    "print(f\"Posts: {len(posts_rows)} | Comments: {len(comments_rows)}\")"
    ]
   },
   {
@@ -288,7 +288,7 @@
    "id": "e1de6858",
    "metadata": {},
    "source": [
-    "## Guardado (CSV + JSONL)"
+    "## Save Data (CSV + JSONL)"
    ]
   },
   {
@@ -301,7 +301,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Guardado en: data\\raw\n"
+      "Saved to: data\\raw\n"
      ]
     }
    ],
@@ -325,7 +325,7 @@
     "    for _, row in comments_df.iterrows():\n",
     "        f.write(json.dumps(row.to_dict(), ensure_ascii=False) + \"\\n\")\n",
     "\n",
-    "print(\"Guardado en:\", RAW_DIR)"
+    "print(\"Saved to:\", RAW_DIR)"
    ]
   },
   {
@@ -333,12 +333,12 @@
    "id": "a43a1b0b",
    "metadata": {},
    "source": [
-    "## Vista rápida"
+    "## Quick View"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "f36bac2f",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Posts: 200 | Comentarios: 15131\n",
       "Posts:\n"
      ]
     },
@@ -390,7 +389,7 @@
        "      <td>1lcftjz</td>\n",
        "      <td>Got my mom her green card by enlisting in the ...</td>\n",
        "      <td>u/SuperiorT</td>\n",
-       "      <td>4155</td>\n",
+       "      <td>4159</td>\n",
        "      <td>537</td>\n",
        "      <td>2025-06-16T00:52:02+00:00</td>\n",
        "      <td>https://www.reddit.com/r/USCIS/comments/1lcftj...</td>\n",
@@ -404,7 +403,7 @@
        "      <td>1grmeq4</td>\n",
        "      <td>Today I became a US citizen</td>\n",
        "      <td>u/adepojus</td>\n",
-       "      <td>3869</td>\n",
+       "      <td>3873</td>\n",
        "      <td>261</td>\n",
        "      <td>2024-11-15T02:45:34+00:00</td>\n",
        "      <td>https://www.reddit.com/r/USCIS/comments/1grmeq...</td>\n",
@@ -418,7 +417,7 @@
        "      <td>1gkfbph</td>\n",
        "      <td>Today I became a US citizen</td>\n",
        "      <td>u/Asteroids19_9</td>\n",
-       "      <td>3696</td>\n",
+       "      <td>3688</td>\n",
        "      <td>142</td>\n",
        "      <td>2024-11-05T19:40:39+00:00</td>\n",
        "      <td>https://www.reddit.com/r/USCIS/comments/1gkfbp...</td>\n",
@@ -432,7 +431,7 @@
        "      <td>1glflxy</td>\n",
        "      <td>So, what now? An immigration attorney perspect...</td>\n",
        "      <td>u/Honest-Grape-9352</td>\n",
-       "      <td>2899</td>\n",
+       "      <td>2898</td>\n",
        "      <td>714</td>\n",
        "      <td>2024-11-07T02:01:16+00:00</td>\n",
        "      <td>https://www.reddit.com/r/USCIS/comments/1glflx...</td>\n",
@@ -446,7 +445,7 @@
        "      <td>1ltlanr</td>\n",
        "      <td>Became a Citizen after 26 years!!</td>\n",
        "      <td>u/Ajax4557</td>\n",
-       "      <td>2647</td>\n",
+       "      <td>2653</td>\n",
        "      <td>165</td>\n",
        "      <td>2025-07-07T04:44:32+00:00</td>\n",
        "      <td>https://www.reddit.com/r/USCIS/comments/1ltlan...</td>\n",
@@ -468,11 +467,11 @@
        "4  1ltlanr                  Became a Citizen after 26 years!!   \n",
        "\n",
        "                author  score  num_comments                    created  \\\n",
-       "0          u/SuperiorT   4155           537  2025-06-16T00:52:02+00:00   \n",
-       "1           u/adepojus   3869           261  2024-11-15T02:45:34+00:00   \n",
-       "2      u/Asteroids19_9   3696           142  2024-11-05T19:40:39+00:00   \n",
-       "3  u/Honest-Grape-9352   2899           714  2024-11-07T02:01:16+00:00   \n",
-       "4           u/Ajax4557   2647           165  2025-07-07T04:44:32+00:00   \n",
+       "0          u/SuperiorT   4159           537  2025-06-16T00:52:02+00:00   \n",
+       "1           u/adepojus   3873           261  2024-11-15T02:45:34+00:00   \n",
+       "2      u/Asteroids19_9   3688           142  2024-11-05T19:40:39+00:00   \n",
+       "3  u/Honest-Grape-9352   2898           714  2024-11-07T02:01:16+00:00   \n",
+       "4           u/Ajax4557   2653           165  2025-07-07T04:44:32+00:00   \n",
        "\n",
        "                                           permalink  is_self  \\\n",
        "0  https://www.reddit.com/r/USCIS/comments/1lcftj...    False   \n",
@@ -503,7 +502,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Comentarios:\n"
+      "Comments:\n"
      ]
     },
     {
@@ -542,7 +541,7 @@
        "      <td>my05pdb</td>\n",
        "      <td>u/DrummerHistorical493</td>\n",
        "      <td>2025-06-16T01:03:23+00:00</td>\n",
-       "      <td>205</td>\n",
+       "      <td>202</td>\n",
        "      <td>What a great son!</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -551,7 +550,7 @@
        "      <td>my05mw5</td>\n",
        "      <td>u/Thedippyhoe</td>\n",
        "      <td>2025-06-16T01:02:57+00:00</td>\n",
-       "      <td>211</td>\n",
+       "      <td>212</td>\n",
        "      <td>Congratulations!!! Big hugs to your momma!\\n\\n...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -560,7 +559,7 @@
        "      <td>my0c8ez</td>\n",
        "      <td>u/WonderfulVariation93</td>\n",
        "      <td>2025-06-16T01:44:40+00:00</td>\n",
-       "      <td>193</td>\n",
+       "      <td>190</td>\n",
        "      <td>You are exempt from all future Mother’s Day gi...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -569,7 +568,7 @@
        "      <td>my08ip3</td>\n",
        "      <td>u/GeekNoy</td>\n",
        "      <td>2025-06-16T01:21:16+00:00</td>\n",
-       "      <td>52</td>\n",
+       "      <td>50</td>\n",
        "      <td>Congrats to your mom. You're an awesome son.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -594,10 +593,10 @@
        "4  1lcftjz    my067yj  u/Greedy_Disaster_3130  2025-06-16T01:06:41+00:00   \n",
        "\n",
        "   score                                               body  \n",
-       "0    205                                  What a great son!  \n",
-       "1    211  Congratulations!!! Big hugs to your momma!\\n\\n...  \n",
-       "2    193  You are exempt from all future Mother’s Day gi...  \n",
-       "3     52       Congrats to your mom. You're an awesome son.  \n",
+       "0    202                                  What a great son!  \n",
+       "1    212  Congratulations!!! Big hugs to your momma!\\n\\n...  \n",
+       "2    190  You are exempt from all future Mother’s Day gi...  \n",
+       "3     50       Congrats to your mom. You're an awesome son.  \n",
        "4    128  This is a great benefit offered to service mem...  "
       ]
      },
@@ -606,10 +605,9 @@
     }
    ],
    "source": [
-    "print(f\"Posts: {len(posts_rows)} | Comentarios: {len(comments_rows)}\")\n",
     "print(\"Posts:\")\n",
     "display(posts_df.head())\n",
-    "print(\"Comentarios:\")\n",
+    "print(\"Comments:\")\n",
     "display(comments_df.head())"
    ]
   }
