feat: additional distributions and statistics

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -818,6 +818,114 @@
     "    plt.savefig(figs_dir / \"support_index_hist.png\", dpi=150)\n",
     "    plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a070527d",
+   "metadata": {},
+   "source": [
+    "## Additional Statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a386fbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sentiment distribution (%)\n",
+      "sentiment_label\n",
+      "neu    48.04\n",
+      "pos    43.97\n",
+      "neg     7.99\n",
+      "Name: proportion, dtype: float64\n",
+      "\n",
+      "Deleted or unknown authors: 8.34%\n",
+      "Bot comments: 1.25%\n",
+      "\n",
+      "Language distribution (%)\n",
+      "lang\n",
+      "en     86.95\n",
+      "nl      3.17\n",
+      "da      2.65\n",
+      "unk     1.12\n",
+      "sl      0.84\n",
+      "fr      0.69\n",
+      "so      0.67\n",
+      "af      0.48\n",
+      "tl      0.42\n",
+      "cy      0.36\n",
+      "ca      0.36\n",
+      "es      0.32\n",
+      "de      0.26\n",
+      "it      0.24\n",
+      "ro      0.20\n",
+      "tr      0.17\n",
+      "pl      0.15\n",
+      "pt      0.15\n",
+      "id      0.12\n",
+      "no      0.12\n",
+      "et      0.09\n",
+      "fi      0.09\n",
+      "sv      0.07\n",
+      "vi      0.07\n",
+      "sk      0.06\n",
+      "cs      0.03\n",
+      "sw      0.03\n",
+      "hr      0.03\n",
+      "hu      0.03\n",
+      "lt      0.03\n",
+      "ru      0.01\n",
+      "sq      0.01\n",
+      "uk      0.01\n",
+      "lv      0.01\n",
+      "Name: proportion, dtype: float64\n",
+      "\n",
+      "Comments containing URLs: 3.11%\n",
+      "Median text length: 64.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load processed comments\n",
+    "df = pd.read_csv(\"data/processed/comments_lang_norm.csv\")\n",
+    "\n",
+    "# --- Sentiment distribution (from VADER) ---\n",
+    "sent_dist = df[\"sentiment_label\"].value_counts(normalize=True) * 100\n",
+    "print(\"Sentiment distribution (%)\")\n",
+    "print(sent_dist.round(2))\n",
+    "\n",
+    "# --- Deleted / unknown authors ---\n",
+    "pct_deleted = (\n",
+    "    df[\"author\"].str.lower().isin([\"u/[deleted]\", \"unknown\"]).mean() * 100\n",
+    ")\n",
+    "print(\"\\nDeleted or unknown authors: %.2f%%\" % pct_deleted)\n",
+    "\n",
+    "# --- Bot comments (AutoModerator, etc.) ---\n",
+    "if \"is_bot\" in df.columns:\n",
+    "    pct_bot = df[\"is_bot\"].mean() * 100\n",
+    "    print(\"Bot comments: %.2f%%\" % pct_bot)\n",
+    "\n",
+    "# --- Language distribution ---\n",
+    "if \"lang\" in df.columns:\n",
+    "    lang_dist = df[\"lang\"].value_counts(normalize=True) * 100\n",
+    "    print(\"\\nLanguage distribution (%)\")\n",
+    "    print(lang_dist.round(2))\n",
+    "\n",
+    "# --- Comments with URLs ---\n",
+    "if \"has_url\" in df.columns:\n",
+    "    pct_url = df[\"has_url\"].mean() * 100\n",
+    "    print(\"\\nComments containing URLs: %.2f%%\" % pct_url)\n",
+    "\n",
+    "# --- Median comment length ---\n",
+    "if \"text_len\" in df.columns:\n",
+    "    median_len = df[\"text_len\"].median()\n",
+    "    print(\"Median text length:\", median_len)"
+   ]
   }
  ],
  "metadata": {
